--- a/demo-01/src/app/add-message/add-message.component.html
+++ b/demo-01/src/app/add-message/add-message.component.html
@@ -1,8 +1,8 @@
-<div>
-  <label for="message">Add a new message: </label>
-  <input [formControl]="message">
-  <button (click)="onAddMessageButtonClick()">Add</button>
-  <p>
-    {{ message.value }}
-  </p>
+<div class="form-group container">
+  <div class="row">
+
+    <input class="form-control col-md-4" placeholder="Add a new message" [formControl]="message">
+
+    <button class="btn btn-primary col-md-1" (click)="onAddMessageButtonClick()">Add</button>
+  </div>
 </div>
