--- a/demo-01/src/app/message-list/message-list.component.html
+++ b/demo-01/src/app/message-list/message-list.component.html
@@ -1,7 +1,11 @@
-<ul>
-  <li *ngFor="let message of filteredMessages" (click)="onMessageClick(message.id)">
-    {{ message.text }} ({{ message.status }})
-    <a [routerLink]="['/', message.id]">details tonen</a>
-    <button (click)="onReadButtonClick(message)">Maak gelezen</button>
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let message of filteredMessages" (click)="onMessageClick(message.id)">
+    <button class="btn btn-secondary" (click)="onReadButtonClick(message)">Maak gelezen</button>
+
+    <span>{{ message.text }} ({{ message.status }})
+      <a [routerLink]="['/', message.id]">details tonen</a>
+    </span>
   </li>
+
+
 </ul>
