--- a/demo-02/src/app/app.component.html
+++ b/demo-02/src/app/app.component.html
@@ -1,10 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Messages app!
-  </h1>
+<div class="container">
+  <div class="row">
+    <h1>
+      Messages app!
+    </h1>
+  </div>
+
+  <nav style="margin-bottom:50px">
+    <a [routerLink]="['/']">Terug naar overzicht</a>
+  </nav>
+
+  <router-outlet></router-outlet>
 </div>
-<nav style="margin-bottom:50px">
-  <a [routerLink]="['/']">Terug naar overzicht</a>
-</nav>
-<router-outlet></router-outlet>
