--- a/demo-02/src/app/message-box/message-box.component.html
+++ b/demo-02/src/app/message-box/message-box.component.html
@@ -1,10 +1,15 @@
 <msg-add-message (addMessage)="onAddMessage($event)"></msg-add-message>
 <msg-message-filter [currentFilter]="filter" (filterChanged)="onFilterChanged($event)"></msg-message-filter>
-<div style="float:left">
-  <h2>list one</h2>
-  <msg-message-list [messages]="messages" (readClicked)="onReadClicked($event)"></msg-message-list>
-</div>
-<div style="float:left;margin-left:50px">
-  <h2>list two (filter: {{filter}})</h2>
-  <msg-message-list [messages]="messages" [filter]="filter" (readClicked)="onReadClicked($event)"></msg-message-list>
+<div class="container">
+  <div class="row">
+      <div class="col-md">
+          <h2>list one</h2>
+          <msg-message-list [messages]="messages" (readClicked)="onReadClicked($event)"></msg-message-list>
+      </div>
+      <div class="col-md">
+          <h2>list two (filter: {{filter}})</h2>
+          <msg-message-list [messages]="messages" [filter]="filter" (readClicked)="onReadClicked($event)"></msg-message-list>
+      </div>
+  </div>
+  
 </div>
