slight layout tweaks demo2

--- a/demo-02/src/app/app.component.html
+++ b/demo-02/src/app/app.component.html
@@ -6,7 +6,7 @@
     </h1>
   </div>
 
-  <nav style="margin-bottom:50px">
+  <nav>
     <a [routerLink]="['/']">Terug naar overzicht</a>
   </nav>
 
