add delete func to demo-01

--- a/demo-01/src/app/message-list/message-list.component.html
+++ b/demo-01/src/app/message-list/message-list.component.html
@@ -5,6 +5,7 @@
 
     <span>{{ message.text }} ({{ message.status }})
       <a [routerLink]="['/', message.id]">details tonen</a>
+      <a href="#" (click)="onDeleteClick(message.id)">Verwijderen</a>
     </span>
   </li>
 
