--- a/demo-01/src/app/message-box/message-box.component.html
+++ b/demo-01/src/app/message-box/message-box.component.html
@@ -4,11 +4,11 @@
   <div class="row">
       <div class="col-md">
           <h2>list one</h2>
-          <msg-message-list [messages]="messages" (toggleClicked)="onToggleClicked($event)"></msg-message-list>
+          <msg-message-list [messages]="messages" (toggleClicked)="onToggleClicked($event)" (deleteClicked)="onDeleteClicked($event)"></msg-message-list>
       </div>
       <div class="col-md">
           <h2>list two (filter: {{filter}})</h2>
-          <msg-message-list [messages]="messages" [filter]="filter" (toggleClicked)="onToggleClicked($event)"></msg-message-list>
+          <msg-message-list [messages]="messages" [filter]="filter" (toggleClicked)="onToggleClicked($event)" (deleteClicked)="onDeleteClicked($event)"></msg-message-list>
       </div>
   </div>
 
