--- a/demo-04/src/app/message-filter/message-filter.component.html
+++ b/demo-04/src/app/message-filter/message-filter.component.html
@@ -1,4 +1,4 @@
-<select class="custom-select col-md-2" [formControl]="filter" (change)="onChange()">
+<select class="custom-select" [formControl]="filter" (change)="onChange()">
   <option value="all">All</option>
   <option value="new">Unread</option>
 </select>
