--- a/demo-04/src/app/message-details/message-details.component.html
+++ b/demo-04/src/app/message-details/message-details.component.html
@@ -1,4 +1,4 @@
-<a style="margin-bottom:50px" [routerLink]="['/']">Terug naar overzicht</a>
+<a [routerLink]="['/']">Terug naar overzicht</a>
 
 <p>
   Id: {{ (message$ | async)?.id }}
