--- a/demo-04/src/styles.css
+++ b/demo-04/src/styles.css
@@ -4,9 +4,9 @@
 
 h1 {
     text-align: center;
-    margin: 50px 0 40px 0px;
+    margin: 50px 0 40px 0;
 }
 
-.uwv-toolbar {
+.custom-toolbar {
     margin-bottom: 10px;
 }
