--- a/demo-02/src/app/message-details/message-details.component.html
+++ b/demo-02/src/app/message-details/message-details.component.html
@@ -1,5 +1,11 @@
+<a [routerLink]="['/']">Terug naar overzicht</a>
+
 <p>
   Id: {{ message.id }}
+</p>
+<p>
   Text: {{ message.text }}
+</p>
+<p>
   Status: {{ message.status }}
 </p>
