--- a/demo-02/src/app/message-list/message-list.component.html
+++ b/demo-02/src/app/message-list/message-list.component.html
@@ -1,12 +1,23 @@
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let message of filteredMessages" (click)="onMessageClick(message.id)">
-    <button class="btn btn-secondary" (click)="onToggleButtonClick(message)">Maak gelezen</button>
-
-    <span>{{ message.text }} ({{ message.status }})
-      <a [routerLink]="['/', message.id]">details tonen</a>
-      <a href="#" (click)="onDeleteClick(message.id)">Verwijderen</a>
-    </span>
+  <li class="list-group-item list-group-item-action" *ngFor="let message of filteredMessages" (click)="onMessageClick(message.id)">
+    <div class="row">
+      <div class="col-sm">
+        <p>
+          {{ message.text }}
+          <span *ngIf="message.status === 'new'"><strong> ({{ message.status }})</strong></span>
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md">
+        <a href="javascript:void(0)" (click)="onToggleButtonClick(message)">{{ message.status === 'new' ? 'Maak
+          gelezen' : 'Maak ongelezen' }}</a> <br>
+        <a href="javascript:void(0)" [routerLink]="['/', message.id]">Details tonen</a>
+      </div>
+      <div class="pull-md-right">
+        <button type="button" class="btn btn-outline-danger" (click)="onDeleteClick(message.id)"><i class="fa fa-trash"></i>
+          Verwijderen</button>
+      </div>
+    </div>
   </li>
-
-
 </ul>
