--- a/demo-01/src/app/message-filter/message-filter.component.html
+++ b/demo-01/src/app/message-filter/message-filter.component.html
@@ -1,6 +1,4 @@
-<div class="container">
-  <select class="custom-select col-md-2" [formControl]="filter" (change)="onChange()">
-    <option value="all">All</option>
-    <option value="new">Unread</option>
-  </select>
-</div>
+<select class="custom-select" [formControl]="filter" (change)="onChange()">
+  <option value="all">All</option>
+  <option value="new">Unread</option>
+</select>
