--- a/demo-01/src/app/add-message/add-message.component.html
+++ b/demo-01/src/app/add-message/add-message.component.html
@@ -1,8 +1,6 @@
-<div class="form-group container">
-  <div class="row">
-
-    <input class="form-control col-md-4" placeholder="Add a new message" [formControl]="message">
-
-    <button class="btn btn-primary col-md-1" (click)="onAddMessageButtonClick()">Add</button>
+<div class="input-group">
+  <input class="form-control col-md-4" placeholder="Add a new message" [formControl]="message">
+  <div class="input-group-append">
+      <button class="btn btn-outline-primary" (click)="onAddMessageButtonClick()">Add</button>
   </div>
 </div>
