--- a/demo-01/src/app/message-box/message-box.component.html
+++ b/demo-01/src/app/message-box/message-box.component.html
@@ -1,15 +1,21 @@
-<msg-add-message (addMessage)="onAddMessage($event)"></msg-add-message>
-<msg-message-filter [currentFilter]="filter" (filterChanged)="onFilterChanged($event)"></msg-message-filter>
-<div class="container">
-  <div class="row">
-      <div class="col-md">
-          <h2>list one</h2>
-          <msg-message-list [messages]="messages" (toggleClicked)="onToggleClicked($event)" (deleteClicked)="onDeleteClicked($event)"></msg-message-list>
-      </div>
-      <div class="col-md">
-          <h2>list two (filter: {{filter}})</h2>
-          <msg-message-list [messages]="messages" [filter]="filter" (toggleClicked)="onToggleClicked($event)" (deleteClicked)="onDeleteClicked($event)"></msg-message-list>
-      </div>
+<div class="row custom-toolbar">
+    <div class="col-md-10">
+      <msg-add-message (addMessage)="onAddMessage($event)"></msg-add-message>
+    </div>
+    <div class="col-md-2">
+      <msg-message-filter [currentFilter]="filter" (filterChanged)="onFilterChanged($event)"></msg-message-filter>
+    </div>
   </div>
-
-</div>
+  
+  <div class="row">
+    <div class="col-md">
+      <h2>List one</h2>
+      <msg-message-list [messages]="messages" (toggleClicked)="onToggleClicked($event)"
+        (deleteClicked)="onDeleteClicked($event)"></msg-message-list>
+    </div>
+    <div class="col-md">
+      <h2>List two (filter: {{ filter }})</h2>
+      <msg-message-list [messages]="messages" [filter]="filter" (toggleClicked)="onToggleClicked($event)"
+        (deleteClicked)="onDeleteClicked($event)"></msg-message-list>
+    </div>
+  </div>
