--- a/demo-03/src/app/message-list/message-list.component.html
+++ b/demo-03/src/app/message-list/message-list.component.html
@@ -1,7 +1,7 @@
 <ul class="list-group">
   <li class="list-group-item list-group-item-action" *ngFor="let message of filteredMessages" (click)="onMessageClick(message.id)">
     <div class="row">
-      <div class="col-sm">
+      <div class="col-md">
         <p>
           {{ message.text }}
           <span *ngIf="message.status === 'new'"><strong> ({{ message.status }})</strong></span>
